--- a/mmsystem/src/main/resources/application.properties
+++ b/mmsystem/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # Database  
-mmsystem.db.driver= com.mysql.jdbc.Driver
-mmsystem.db.url= jdbc:mysql://localhost:3306/mmsystem
-mmsystem.db.username=root
-mmsystem.db.password=password
+db.driver= com.mysql.jdbc.Driver
+db.url= jdbc:mysql://localhost:3306/mmsystem
+db.username=root
+db.password=password
 # Hibernate  
-hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=update
 entitymanager.packagesToScan=com.mmsystem.property.model
