--- a/mmsystem/src/main/resources/application.properties
+++ b/mmsystem/src/main/resources/application.properties
@@ -6,5 +6,5 @@ db.password=password
 # Hibernate  
 hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=update
+hibernate.hbm2ddl.auto=create
 entitymanager.packagesToScan=com.mmsystem.property.model
