--- a/mmsystem/src/main/resources/application.properties
+++ b/mmsystem/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # Database  
-db.driver= com.mysql.jdbc.Driver
+db.driver= com.mysql.cj.jdbc.Driver
 db.url= jdbc:mysql://localhost:3306/mmsystem
 db.username=root
 db.password=password
 # Hibernate  
-hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=create 
 entitymanager.packagesToScan=com.mmsystem.property.model
