After lomok and JWT auth working well

--- a/mmsystem/src/main/resources/application.properties
+++ b/mmsystem/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-# Database  
+# Database  jdbc-url is instead of url b/c it is going to be used for HikariCP
 db.driver= com.mysql.cj.jdbc.Driver
-db.url= jdbc:mysql://localhost:3306/mmsystem
+db.jdbc-url= jdbc:mysql://localhost:3306/mmsystem
 db.username=root
 db.password=password
 # Hibernate  
