--- a/mmsystem/src/main/resources/application.properties
+++ b/mmsystem/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-# Database  jdbc-url is instead of url b/c it is going to be used for HikariCP
+#mysql just testing
 db.driver= com.mysql.cj.jdbc.Driver
 db.jdbc-url= jdbc:mysql://localhost:3306/mmsystem
-db.username=root
+db.username= root
 db.password=password
 # Hibernate  
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
