--- a/mmsystem/pom.xml
+++ b/mmsystem/pom.xml
@@ -48,6 +48,11 @@
 		    <groupId>org.apache.logging.log4j</groupId>
 		    <artifactId>log4j-spring-boot</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.4</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
