--- a/mmsystem/src/main/resources/application.properties
+++ b/mmsystem/src/main/resources/application.properties
@@ -8,3 +8,5 @@ hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=update
 entitymanager.packagesToScan=com.mmsystem.property.model
+
+spring.h2.console.enabled=true
