--- a/mmsystem/src/main/resources/application.properties
+++ b/mmsystem/src/main/resources/application.properties
@@ -9,4 +9,11 @@ hibernate.show_sql=true
 hibernate.hbm2ddl.auto=update
 entitymanager.packagesToScan=com.mmsystem.property.model
 
-spring.h2.console.enabled=true
+#Email Notification from MMService
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ethioteste@gmail.com
+spring.mail.password=wqefrpnrqbawusxw
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
