--- a/mmsystem/pom.xml
+++ b/mmsystem/pom.xml
@@ -44,10 +44,7 @@
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-log4j2</artifactId>
 		</dependency>
-		<dependency>
-		    <groupId>org.apache.logging.log4j</groupId>
-		    <artifactId>log4j-spring-boot</artifactId>
-		</dependency>
+		
 		<dependency>
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
@@ -73,18 +70,18 @@
 		
 <!--		Auto generates/builder for codes for entities like getters,setters, etc-->
 		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-		</dependency>
+	        <groupId>org.projectlombok</groupId>
+	        <artifactId>lombok</artifactId>
+	        
+	    </dependency>
 		
-	  	<dependency>
+		<dependency>
 		  <groupId>org.mapstruct</groupId>
 		  <artifactId>mapstruct</artifactId>
 		  <version>${org.mapstruct.version}</version>
 		</dependency>
+	 	
 		
-
 <!--		Start of Security related dependency -->
 		<dependency>
 	        <groupId>org.springframework.boot</groupId>
@@ -118,12 +115,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
 		</dependency>
-	
-    	<dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
-    	
+    	<dependency>
+		   <groupId>org.springdoc</groupId>
+		   <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+		   <version>2.1.0</version>
+		</dependency>
     	<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
